Paper describing SFR in COSMOS

--- a/COSMOS/cosmos.bib
+++ b/COSMOS/cosmos.bib
@@ -8,3 +8,12 @@
     year=2016,
     publisher={IOP Publishing}
 }
+@article{ilbert2015evolution,
+  title={Evolution of the specific star formation rate function at z< 1.4 Dissecting the mass-SFR plane in COSMOS and GOODS},
+  author={Ilbert, O and Arnouts, S and Le Floc’h, E and Aussel, H and Bethermin, M and Capak, Peter and Hsieh, B-C and Kajisawa, M and Karim, A and Le F{\`e}vre, Olivier and others},
+  journal={Astronomy \& Astrophysics},
+  volume={579},
+  pages={A2},
+  year={2015},
+  publisher={EDP Sciences}
+}
