More COSMOS related papers

--- a/COSMOS/cosmos.bib
+++ b/COSMOS/cosmos.bib
@@ -17,3 +17,17 @@
     year={2015},
     publisher={EDP Sciences}
 }
+@article{10.1093/mnras/stt1016,
+    author = {Freeman, P. E. and Izbicki, R. and Lee, A. B. and Newman, J. A. and Conselice, C. J. and Koekemoer, A. M. and Lotz, J. M. and Mozena, M.},
+    title = {New image statistics for detecting disturbed galaxy morphologies at high redshift},
+    journal = {Monthly Notices of the Royal Astronomical Society},
+    volume = {434},
+    number = {1},
+    pages = {282-295},
+    year = {2013},
+    month = {06},
+    issn = {0035-8711},
+    doi = {10.1093/mnras/stt1016},
+    url = {https://doi.org/10.1093/mnras/stt1016},
+    eprint = {https://academic.oup.com/mnras/article-pdf/434/1/282/18499355/stt1016.pdf},
+}
