--- a/report/report.bib
+++ b/report/report.bib
@@ -31,3 +31,61 @@
     url = {https://doi.org/10.1093/mnras/stt1016},
     eprint = {https://academic.oup.com/mnras/article-pdf/434/1/282/18499355/stt1016.pdf},
 }
+
+@article{10.1111/j.1365-2966.2008.14004.x,
+    author = {Lotz, Jennifer M. and Jonsson, Patrik and Cox, T. J. and Primack, Joel R.},
+    title = "{Galaxy merger morphologies and time-scales from simulations of equal-mass gas-rich disc mergers}",
+    journal = {Monthly Notices of the Royal Astronomical Society},
+    volume = {391},
+    number = {3},
+    pages = {1137-1162},
+    year = {2008},
+    month = {11},
+    doi = {10.1111/j.1365-2966.2008.14004.x},
+    url = {https://doi.org/10.1111/j.1365-2966.2008.14004.x},
+    eprint = {https://academic.oup.com/mnras/article-pdf/391/3/1137/13143271/mnras391-1137.pdf},
+}
+
+@article{scoville2023cosmic,
+  title={Cosmic Evolution of Gas and Star Formation},
+  author={Scoville, Nick and Faisst, Andreas and Weaver, John and Toft, Sune and McCracken, Henry J and Ilbert, Olivier and Diaz-Santos, Tanio and Staguhn, Johannes and Koda, Jin and Casey, Caitlin and others},
+  journal={The Astrophysical Journal},
+  volume={943},
+  number={2},
+  pages={82},
+  year={2023},
+  publisher={IOP Publishing}
+}
+
+@article{lotz2010effect,
+  title={The effect of mass ratio on the morphology and time-scales of disc galaxy mergers},
+  author={Lotz, Jennifer M and Jonsson, Patrik and Cox, TJ and Primack, Joel R},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={404},
+  number={2},
+  pages={575--589},
+  year={2010},
+  publisher={Blackwell Publishing Ltd Oxford, UK}
+}
+
+@article{nevin2021accurate,
+  title={Accurate identification of galaxy mergers with stellar kinematics},
+  author={Nevin, R and Blecha, L and Comerford, J and Greene, JE and Law, DR and Stark, DV and Westfall, KB and Vazquez-Mata, JA and Smethurst, R and Argudo-Fern{\'a}ndez, M and others},
+  journal={The Astrophysical Journal},
+  volume={912},
+  number={1},
+  pages={45},
+  year={2021},
+  publisher={IOP Publishing}
+}
+
+@article{pearson2019effect,
+  title={Effect of galaxy mergers on star-formation rates},
+  author={Pearson, WJ and Wang, L and Alpaslan, M and Baldry, I and Bilicki, M and Brown, MJI and Grootes, MW and Holwerda, Benne W and Kitching, TD and Kruk, S and others},
+  journal={Astronomy \& Astrophysics},
+  volume={631},
+  pages={A51},
+  year={2019},
+  publisher={EDP Sciences}
+}
+
