--- a/report/report.bib
+++ b/report/report.bib
@@ -10,7 +10,7 @@
 }
 @article{ilbert2015evolution,
     title={Evolution of the specific star formation rate function at z< 1.4 Dissecting the mass-SFR plane in report and GOODS},
-    author={Ilbert, O and Arnouts, S and Le Floc’h, E and Aussel, H and Bethermin, M and Capak, Peter and Hsieh, B-C and Kajisawa, M and Karim, A and Le F{\`e}vre, Olivier and others},
+    author={Ilbert, O and Arnouts, S and Le Floch, E and Aussel, H and Bethermin, M and Capak, Peter and Hsieh, B-C and Kajisawa, M and Karim, A and Le F{\`e}vre, Olivier and others},
     journal={Astronomy \& Astrophysics},
     volume={579},
     pages={A2},
@@ -34,7 +34,7 @@
 
 @article{10.1111/j.1365-2966.2008.14004.x,
     author = {Lotz, Jennifer M. and Jonsson, Patrik and Cox, T. J. and Primack, Joel R.},
-    title = "{Galaxy merger morphologies and time-scales from simulations of equal-mass gas-rich disc mergers}",
+    title = "Galaxy merger morphologies and time-scales from simulations of equal-mass gas-rich disc mergers",
     journal = {Monthly Notices of the Royal Astronomical Society},
     volume = {391},
     number = {3},
